--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,3 +1,10 @@
+/* main section styling */
+.container{
+    width: 1300px;
+    margin: 0 auto;
+    margin-top: 70px;
+    padding: 0px 15px;
+}
 /* main .hero section styling */
 
 .hero{
@@ -15,6 +22,7 @@
     width: 100%;
     height: 640px;
     opacity: 0.6;
+    
 } 
 
 .hero .hero-texts {
@@ -214,7 +222,7 @@
     background-position: bottom;
     background-size: 1400px 900px;
     background-repeat: no-repeat;
-    width: 1217px;
+    width: 1270px;
     height: 700px;
     opacity: 0.7;
 }
